[package]
name = "dropcount"
version = "0.1.0"
edition = "2021"
authors = ["Akira Mizuno <akmizno@gmail.com>"]
description = "Count destructor calls"
keywords = ["drop"]
categories = ["Testing"]
repository = "https://github.com/akmizno/dropcount"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
